--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   const CONFIG = {
     commandPathDelimiter: '/',
     commandSearchDelimiter: ' ',
-    defaultSearchTemplate: 'https://duckduckgo.com/?q={}',
-    openLinksInNewTab: true,
+    defaultSearchTemplate: 'https://google.com/?q={}',
+    openLinksInNewTab: false,
     suggestionLimit: 4,
   };
 
@@ -41,23 +41,12 @@
   const COMMANDS = new Map([
     ['a', { name: 'ChatGPT', searchTemplate: '?q={}', url: 'https://chatgpt.com' }],
     ['c', { name: 'Cloudflare', url: 'https://dash.cloudflare.com' }],
-    ['d', { name: 'Drive', url: 'https://drive.google.com/drive/u/0/my-drive' }],
-    ['e', { name: 'Resend', url: 'https://resend.com/emails?time=all&page=1' }],
-    ['f', { name: 'Figma', url: 'https://www.figma.com' }],
-    ['g', { name: 'GitHub', searchTemplate: '/search?q={}', suggestions: ['g/copilot', 'g/trending'], url: 'https://github.com' }],
-    ['i', { name: 'Intuit', url: 'https://selfemployed.intuit.com/home' }],
-    ['o', { name: 'Droplet', url: 'https://cloud.digitalocean.com/projects/50ffcff7-ad65-40e3-af88-3cbc5a38cf99/resources' }],
-    ['p', { name: 'Proton', suggestions: ['p/pass', 'p/drive'], url: 'https://mail.proton.me/u/0/inbox' }],
-    ['p/drive', { url: 'https://drive.proton.me/u/0' }],
-    ['p/pass', { url: 'https://pass.proton.me/u/0' }],
+    ['n/opt', { name: 'NixOS Options', url: 'https://search.nixos.org/options?channel=unstable&query={}' }],
+    ['n/pkg', { name: 'NixOS Packages', searchTemplate: '/packages?channel=unstable&query={}', url: 'https://search.nixos.org' }],
+    ['nixpkgs', { name: 'Nixpkgs', url: 'https://github.com/nixos/nixpkgs' }],
+    ['g', { name: 'GitHub', searchTemplate: '/{}', suggestions: ['g/quinneden', 'g/nixpkgs'], url: 'https://github.com' }],
     ['r', { name: 'Reddit', searchTemplate: '/search/?q={}', url: 'https://www.reddit.com' }],
-    ['s', { name: 'Supabase', url: 'https://supabase.com/dashboard/projects' }],
-    ['t', { name: 'TickTick', url: 'https://ticktick.com/webapp/#q/today/tasks' }],
     ['v', { name: 'Vercel', suggestions: ['v0.dev'], url: 'https://vercel.com/dashboard' }],
-    ['y', { name: 'YouTube', searchTemplate: '/results?search_query={}', url: 'https://www.youtube.com/feed/subscriptions' }],
-    ['0', { name: 'localhost', suggestions: ['0:54323', '0:54324'], url: 'http://localhost:3000' }],
-    ['0:54323', { url: 'http://localhost:54323' }],
-    ['0:54324', { url: 'http://localhost:54324' }],
   ]);
 </script>
 
