--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
 
   // prettier-ignore
   const COMMANDS = new Map([
-    ['a', { name: 'ChatGPT', searchTemplate: '?q={}', url: 'https://chatgpt.com' }],
-    ['c', { name: 'Cloudflare', url: 'https://dash.cloudflare.com' }],
-    ['n/opt', { name: 'NixOS Options', url: 'https://search.nixos.org/options?channel=unstable&query={}' }],
-    ['n/pkg', { name: 'NixOS Packages', searchTemplate: '/packages?channel=unstable&query={}', url: 'https://search.nixos.org' }],
-    ['nixpkgs', { name: 'Nixpkgs', url: 'https://github.com/nixos/nixpkgs' }],
-    ['g', { name: 'GitHub', searchTemplate: '/{}', suggestions: ['g/quinneden', 'g/nixpkgs'], url: 'https://github.com' }],
-    ['r', { name: 'Reddit', searchTemplate: '/search/?q={}', url: 'https://www.reddit.com' }],
-    ['v', { name: 'Vercel', suggestions: ['v0.dev'], url: 'https://vercel.com/dashboard' }],
+    ['a', { name: 'chatgpt', searchTemplate: '?q={}', url: 'https://chatgpt.com' }],
+    ['c', { name: 'cloudflare', url: 'https://dash.cloudflare.com' }],
+    ['o', { name: 'nix opt', url: 'https://search.nixos.org/options?channel=unstable&query={}' }],
+    ['p', { name: 'nix pkg', searchTemplate: '/packages?channel=unstable&query={}', url: 'https://search.nixos.org' }],
+    ['g', { name: 'github', searchTemplate: '/{}', suggestions: ['g/quinneden', 'g/nixpkgs'], url: 'https://github.com' }],
+    ['r', { name: 'reddit', searchTemplate: '/search/?q={}', url: 'https://www.reddit.com' }],
+    ['v', { name: 'vercel', suggestions: ['v0.dev'], url: 'https://vercel.com/dashboard' }],
+    ['f', { name: 'flags', url: 'chrome://flags' }],
+    ['s', { name: 'settings',  url: 'chrome://settings' }],
   ]);
 </script>
 
