Modified: index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     ['g', { name: 'github', searchTemplate: '/{}', suggestions: ['g/quinneden', 'g/nixpkgs'], url: 'https://github.com' }],
     ['r', { name: 'reddit', searchTemplate: '/search/?q={}', url: 'https://www.reddit.com' }],
     ['v', { name: 'vercel', suggestions: ['v0.dev'], url: 'https://vercel.com/dashboard' }],
-    ['l', { name: 'coursera', url: 'https://coursera.com' }],
+    ['l', { name: 'coursera', url: 'https://coursera.org' }],
     ['f', { name: 'flags', url: 'chrome://flags' }],
     ['s', { name: 'settings',  url: 'chrome://settings' }],
   ]);
